--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                 <p>With hands-on experience in deep learning, robotics control, and API development, I'm passionate about creating societally beneficial solutions. I thrive in collaborative environments and am always eager to tackle new challenges in the rapidly evolving world of AI.</p>
                 <div class="stats">
                     <div class="stat-item">
-                        <div class="stat-number">8.54</div>
+                        <div class="stat-number">8.61</div>
                         <div class="stat-label">CGPA</div>
                     </div>
                     <div class="stat-item">
@@ -579,7 +579,7 @@
                         <div class="stat-label">Projects</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">4</div>
+                        <div class="stat-number">1</div>
                         <div class="stat-label">Internships</div>
                     </div>
                     <div class="stat-item">
@@ -711,8 +711,7 @@
                     <span class="tech-tag">Web Scraping</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="#" onclick="return false;" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="project-card">
@@ -725,8 +724,7 @@
                     <span class="tech-tag">Computer Vision</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="#" class="project-link"><i class="fas fa-play"></i> Demo Video</a>
+                    <a href="https://github.com/Sharukesh3/jetauto-military" onclick="return false;" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="project-card">
@@ -739,8 +737,7 @@
                     <span class="tech-tag">FastAPI</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="https://github.com/Sharukesh3/Skin-Lesion-Classification" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="project-card">
@@ -753,8 +750,7 @@
                     <span class="tech-tag">Text Mining</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="https://github.com/Sharukesh3/LLM-for-hydrogen-storage" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="project-card">
@@ -766,7 +762,7 @@
                     <span class="tech-tag">Real-time Analysis</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="https://github.com/Sharukesh3/AI-Driven-Cybersecurity-Threat-Prediction-and-Prevention" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="project-card">
@@ -778,7 +774,7 @@
                     <span class="tech-tag">Energy Optimization</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="https://github.com/Sharukesh3/Flasker" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
         </div>
