--- a/index.html
+++ b/index.html
@@ -781,25 +781,25 @@
     </section>
 
     <section id="contact" class="section">
-        <h2 class="section-title">Let's Connect</h2>
-        <div class="contact-content">
-            <p>I'm always open to discussing new opportunities, collaborations, or just having a chat about AI and technology. Feel free to reach out!</p>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <i class="fas fa-envelope contact-icon"></i>
-                    <div class="contact-text">shaukesh@gmail.com</div>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-github contact-icon"></i>
-                    <div class="contact-text">GitHub</div>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-linkedin contact-icon"></i>
-                    <div class="contact-text">LinkedIn</div>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone contact-icon"></i>
-                    <div class="contact-text">+91 8072855059</div>
+    <h2 class="section-title">Let's Connect</h2>
+    <div class="contact-content">
+        <p>I'm always open to discussing new opportunities, collaborations, or just having a chat about AI and technology. Feel free to reach out!</p>
+        <div class="contact-info">
+            <div class="contact-item">
+                <i class="fas fa-envelope contact-icon"></i>
+                <a href="mailto:shaukesh@gmail.com" class="contact-text">shaukesh@gmail.com</a>
+            </div>
+            <div class="contact-item">
+                <i class="fab fa-github contact-icon"></i>
+                <a href="https://github.com/Sharukesh3" target="_blank" class="contact-text">GitHub</a>
+            </div>
+            <div class="contact-item">
+                <i class="fab fa-linkedin contact-icon"></i>
+                <a href="https://www.linkedin.com/in/sharukesh-mahendran-0726212b1/" target="_blank" class="contact-text">LinkedIn</a>
+            </div>
+            <div class="contact-item">
+                <i class="fas fa-phone contact-icon"></i>
+                <a href="tel:+918072855059" class="contact-text">+91 8072855059</a>
                 </div>
             </div>
         </div>
