--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
         <div class="contact-info">
             <div class="contact-item">
                 <i class="fas fa-envelope contact-icon"></i>
-                <a href="mailto:shaukesh@gmail.com" class="contact-text">shaukesh@gmail.com</a>
+                <a href="mailto:shaukesh@gmail.com" class="contact-text">sharukesh@gmail.com</a>
             </div>
             <div class="contact-item">
                 <i class="fab fa-github contact-icon"></i>
