--- a/index.html
+++ b/index.html
@@ -996,6 +996,82 @@
                 transform: translateY(0);
             }
         }
+
+        .resume-download {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+            position: relative;
+            z-index: 2;
+        }
+
+        .download-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            background: linear-gradient(45deg, #00d4ff, #0099cc);
+            color: #ffffff;
+            text-decoration: none;
+            padding: 15px 30px;
+            border-radius: 50px;
+            font-weight: 600;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 212, 255, 0.4);
+            border: none;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .download-btn:hover {
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 15px 30px rgba(0, 212, 255, 0.6);
+        }
+
+        .download-btn:active {
+            transform: translateY(0);
+        }
+
+        .download-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .download-btn:hover::before {
+            left: 100%;
+        }
+
+        .download-icon {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
+            transition: all 0.3s ease;
+        }
+
+        .download-btn:hover .download-icon {
+            transform: scale(1.1) rotate(5deg);
+        }
+
+        /* Responsive design */
+        @media (max-width: 768px) {
+            .about-text {
+                padding: 30px 20px;
+                margin: 0 10px;
+            }
+            
+            .download-btn {
+                padding: 12px 24px;
+                font-size: 0.9rem;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -1041,6 +1117,12 @@
                 <a href="#contact" class="btn btn-secondary">
                     <i class="fas fa-envelope"></i>
                     Let's Connect
+                </a>
+                <a href="https://github.com/Sharukesh3/Sharukesh3.github.io/raw/main/Resume.pdf" class="download-btn" download>
+                    <svg class="download-icon" viewBox="0 0 24 24">
+                        <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z" />
+                    </svg>
+                    Download Resume
                 </a>
             </div>
         </div>
@@ -1134,7 +1216,6 @@
                     <span class="skill-tag">Kubernetes</span>
                     <span class="skill-tag">AWS</span>
                     <span class="skill-tag">CI/CD</span>
-                    <span class="skill-tag">Linux</span>
                 </div>
             </div>
             <div class="skill-category scroll-reveal-scale">
